--- a/src/component/NavBar/style.css
+++ b/src/component/NavBar/style.css
@@ -1,39 +1,101 @@
 nav{
-    background-color: rgb(150, 100, 100);
     height: 60px;
+    margin-bottom: 1px;
+    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
+    background-color: #131921;
+    position: fixed;
+    
+    
     
 }
-.searchContainer{
-    width: 70%;
+.logoContainer{
     height: 100%;
+    width: 10%;
     display: flex;
-    gap: 5px;
     align-items: center;
-
-
-}
-.searchContainer input{
-    width: 70%;
-    height: 46%;
-    border: none;
-    padding: 0 15px;
+    object-fit: contain;
 }
 .logo{
-    width: 100px;
-    margin: 0 20px;
+    width: 100%;
 }
 .searchLogo{
     height: 100%;
 }
+.searchContainer{
+    width: 60%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.searchContainer input{
+    width: 90%;
+    height: 46%;
+    border: none;
+    padding: 0 15px;
+}
+
 .searchButton{
-    background-color: rgb(176, 101, 8);
+    background-color: #cd9042;
     border: none;
     width: 3%;
-    height: 50%;
+    height: 46%;
     display: flex;
     justify-content: center;
     align-items: center;
     
+}
+
+.menu{
+    height: 100%;
+    width: 25%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.menuLink{
+    height: 100%;
+    width: 25%;
+    color: antiquewhite;
+}
+.subMenu{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    justify-content: center;
+    object-fit: contain;
+    color: antiquewhite;
+}
+.line1{
+    font-size: 10px;
+
+}
+.line2{
+    font-size: 13px;
+    font-weight: 800;
+}
+.cart{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    justify-content: center;
+    object-fit: contain;
+    color: antiquewhite;
+}
+.cartIcon{
+    margin-top: 7px;
+    width: 50%;
+    
+}
+.cartCount{
+    width: 40%;
+    /* z-index: 1; */
+    position: relative;
+    top: -50px;
+    right: -45px;
 }
