--- a/src/component/Home/style.css
+++ b/src/component/Home/style.css
@@ -2,8 +2,18 @@
     max-width: 1500px;
     margin: auto;
 }
+.productContainer{
+    max-width: 1500px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+}
 .homeImage{
     margin-top: 60px;
     width: 100%;
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1),rgba(0, 0, 0, 0) );
+    z-index: -1;
+    margin-bottom: -85px;
 }
