--- a/src/component/Cart/style.css
+++ b/src/component/Cart/style.css
@@ -76,6 +76,7 @@ width: 30%;
 .info{
     padding: 20px;
     height: 100%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -88,6 +89,9 @@ width: 30%;
     background-color: #f0c14b;
     border:  1px solid;
     border-color: #a88734 #9c7e31 #846a29;
+    display: flex;
+    align-items: center;
+    object-fit: contain;
 
 
 }
