--- a/src/component/Login/style.css
+++ b/src/component/Login/style.css
@@ -1,5 +1,5 @@
 .Main{
-  margin: 20px auto;
+  margin: 4% auto;
     height: auto;
     width:30vw;
     background-color: white;
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    padding: 20px;
+    padding: 35px 20px 35px 20px;
 }
 .amazonLogo{
     width: 35%;
